--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "angular2-minimum-starter",
   "version": "1.0.0",
   "scripts": {
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "http-server": "http-server",
+    "postinstall": "typings install --ambient",
+    "clean": "rimraf built/",
+    "lite": "lite-server -c bs-config.json",
+    "start": "concurrently -r \"npm run watch\" \"npm run lite\" ",
+    "copy": "cp src/{*.html,*.css,*.js} built/",
+    "copytemplates": "cp src/app/{*.html,*.css} built/app/",
+    "build": "concurrently \"tsc\" \"npm run copy\"",
+    "watch": "tsc --watch",
+    "serve": "http-server -p 9090 -c-1",
     "test": "karma start karma.conf.js",
     "coverage": "node_modules/.bin/remap-istanbul -i report/coverage/coverage-final.json -o report/coverage/ -t html",
-    "start": "concurrently -r \"npm run tsc:w\" \"npm run lite\" ",
-    "start-heroku": "concurrently \"npm run tsc\" \"npm run http-server\" ",
-    "postinstall": "typings install"
+    "start-heroku": "concurrently \"npm run build\" \"npm run serve\" "
   },
   "license": "MIT",
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/router": "^2.0.0-rc.1",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
@@ -22,23 +30,24 @@
     "jscs": "^2.11.0",
     "lite-server": "^2.1.0",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "rxjs": "^5.0.0-beta.6",
     "systemjs": "0.19.22",
     "typescript": "^1.8.0",
-    "zone.js": "0.6.6"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
-    "http-server": "^0.9.0",
-    "jasmine-core": "^2.4.1",
+    "http-server": "^0.8.5",
+    "jasmine": "2.3.2",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.5",
-    "karma-jasmine": "^0.3.7",
-    "karma-mocha-reporter": "^2.0.0",
-    "lite-server": "^2.0.1",
-    "remap-istanbul": "^0.5.1",
-    "typescript": "^1.7.5",
-    "typings": "^0.6.8"
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "^0.0.4",
+    "karma-jasmine": "^0.3.6",
+    "karma-mocha-reporter": "^2.0.3",
+    "lite-server": "^2.2.0",
+    "remap-istanbul": "^0.6.3",
+    "rimraf": "^2.4.3",
+    "typescript": "1.8.10",
+    "typings": "^0.6.6"
   }
 }
